--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 
     <link rel="stylesheet" href="style.css"/>
     
+    <script src="models/drawable-object.class.js"></script>
     <script src="models/movable-object.class.js"></script>
     <script src="models/character.class.js"></script>
     <script src="models/chicken.class.js"></script>
@@ -17,7 +18,8 @@
     <script src="models/background-object-class.js"></script>
     <script src="models/keyboard.class.js"></script>
     <script src="models/level.class.js"></script>
-    <script src="models/endboss.class.js"></script>
+    <script src="models/endboss.class.js"></script>    
+    <script src="models/status-bar.class.js"></script>
     <script src="levels/level1.js"></script>
     <script src="js/game.js"></script>
 
