--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>El Pollo Loco</title>
 
     <link rel="stylesheet" href="style.css"/>
+    <link rel="shortcut icon" href="./img/FavIcon.png" type="image/x-icon">
     
     <script src="models/drawable-object.class.js"></script>
     <script src="models/movable-object.class.js"></script>
@@ -24,6 +25,7 @@
     <script src="models/level.class.js"></script>
     <script src="models/throwable-object.class.js"></script>
     <script src="models/endboss.class.js"></script>
+    <script src="models/bottles-on-ground.class.js"></script>
     <script src="levels/level1.js"></script>
     <script src="js/game.js"></script>
 
