--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
     <script src="models/throwable-object.class.js"></script>
     <script src="models/endboss.class.js"></script>
     <script src="models/bottles-on-ground.class.js"></script>
+    <script src="models/coins.class.js"></script>
     <script src="levels/level1.js"></script>
     <script src="js/game.js"></script>
 
