adjust character offset bottom and added some new icons for start screen. prepared start screen with pic and icons

--- a/index.html
+++ b/index.html
@@ -34,11 +34,12 @@
   <body onload="init()">
     <h1>El Pollo Loco</h1>
 
-    <canvas id="canvas" width="720" height="480" class="d-none"> </canvas>
-    <div class="start-screen-main" id="start_screen">
-      <div class="start-orientation">
-        <img id="start-btn-1" class="start-btn" src="./img/10_game_instruction_icons/zoom-in.png">
-        <img id="start-btn-2" class="start-btn" src="./img/10_game_instruction_icons/play.png">
+    <canvas id="canvas" width="720" height="480" class=""></canvas>
+
+    <div class="start-screen-main d-none" id="start_screen">
+      <div id="start_orientation" class="start-orientation">
+        <img id="start-btn-1" class="start-btn" src="./img/10_game_instruction_icons/maximize.png">
+        <img id="start-btn-2" class="start-btn" src="./img/10_game_instruction_icons/play1.png">
         <img id="start-btn-3" class="start-btn" src="./img/10_game_instruction_icons/soundoff.png">
       </div>
       <img class="start-screen" src="./img/9_intro_outro_screens/start/startscreen_1.png"/>      
