--- a/index.html
+++ b/index.html
@@ -34,22 +34,30 @@
   <body onload="init()">
     <h1>El Pollo Loco</h1>
 
-    <canvas id="canvas" width="720" height="480" class=""></canvas>
+    <canvas id="canvas" width="720" height="480" class="">      
+    </canvas>
+    <img id="game_over_img_1" class="game-over-img d-none" src="./img/9_intro_outro_screens/game_over/oh no you lost!.png">
+    <img id="game_over_img_2" class="game-over-img d-none" src="./img/9_intro_outro_screens/game_over/game over!.png">
+    <img id="win_img_1" class="win-img d-none" src="img/9_intro_outro_screens/win/win_1.png">
+    <img id="win_img_2" class="win-img d-none" src="img/9_intro_outro_screens/win/win_2.png">
+
 
     <div class="start-screen-main d-none" id="start_screen">
       <div id="start_orientation" class="start-orientation">
         <img id="start-btn-1" class="start-btn" src="./img/10_game_instruction_icons/maximize.png">
-        <img id="start-btn-2" class="start-btn" src="./img/10_game_instruction_icons/play1.png">
+        <img id="start-btn-2" class="start-btn" src="./img/10_game_instruction_icons/play1.png"/>
         <img id="start-btn-3" class="start-btn" src="./img/10_game_instruction_icons/soundoff.png">
       </div>
       <img class="start-screen" src="./img/9_intro_outro_screens/start/startscreen_1.png"/>      
     </div>
 
     <div class="game-introducing">      
-      <h2><img class="game-instructions-left" src="./img/10_game_instruction_icons/arrow left.png"/>Walk Left</h2>
+      <h2><img class="game-instructions-left" src="./img/10_game_instruction_icons/arrow left.png"/>Arrow Left</h2>
       <h2>Key-D for Throw<img class="game-instructions" src="./img/10_game_instruction_icons/bottle.png"/>Space for Jump</h2>
-      <h2>Walk Right<img class="game-instructions-right" src="./img/10_game_instruction_icons/arrow left.png"/></h2>
+      <h2>Arrow Right<img class="game-instructions-right" src="./img/10_game_instruction_icons/arrow left.png"/></h2>
     </div>
+
+    
 
   </body>
 </html>
