--- a/index.html
+++ b/index.html
@@ -31,11 +31,12 @@
     <script src="js/game.js"></script>
   </head>
 
-  <body onload="init()">
+  <body>
     <h1>El Pollo Loco</h1>
 
-    <canvas id="canvas" width="720" height="480" class="">      
+    <canvas id="canvas" width="720" height="480" class="d-none">      
     </canvas>
+
     <!-- images if pepe wins  -->
     <img id="game_over_img_1" class="game-over-img d-none" src="./img/9_intro_outro_screens/game_over/oh no you lost!.png">
     <img id="game_over_img_2" class="game-over-img d-none" src="./img/9_intro_outro_screens/game_over/game over!.png">
@@ -44,22 +45,30 @@
     <img id="win_img_2" class="win-img d-none" src="img/9_intro_outro_screens/win/win_2.png">
 
     <!-- startscreen -->
-    <div class="start-screen-main d-none" id="start_screen">
+    <div class="start-screen-main" id="start_screen">
       <div id="start_orientation" class="start-orientation">
-        <img id="start-btn-1" class="start-btn" src="./img/10_game_instruction_icons/maximize.png">
-        <img id="start-btn-2" class="start-btn" src="./img/10_game_instruction_icons/play1.png"/>
-        <img id="start-btn-3" class="start-btn" src="./img/10_game_instruction_icons/soundoff.png">
+        <img id="start_btn_1" class="start-btn" src="./img/10_game_instruction_icons/maximize.png">
+        <img onclick="init()" id="start_btn_2" class="start-btn" src="./img/10_game_instruction_icons/play1.png"/>
+        <img id="start_btn_3" class="start-btn" src="./img/10_game_instruction_icons/soundoff.png">
       </div>
       <img class="start-screen" src="./img/9_intro_outro_screens/start/startscreen_1.png"/>      
     </div>
+
     <!-- game move jump and throw intructions  -->
-    <div class="game-introducing">      
+    <div id="game_introducing" class="game-introducing">      
       <h2><img class="game-instructions-left" src="./img/10_game_instruction_icons/arrow left.png"/>Arrow Left</h2>
-      <h2>Key-D for Throw<img class="game-instructions" src="./img/10_game_instruction_icons/bottle.png"/>Space for Jump</h2>
+      <h2>Key-D for Throw<img class="game-instructions" src="./img/10_game_instruction_icons/bottle2.png"/>Space for Jump</h2>
       <h2>Arrow Right<img class="game-instructions-right" src="./img/10_game_instruction_icons/arrow left.png"/></h2>
     </div>
 
-    
+    <!-- refresh and play again -->
+    <div id="restart_game" class="restart-game-part d-none">
+      <h2>Click refresh button</h2>
+      <h2><img class="game-instructions-right" src="./img/10_game_instruction_icons/arrow left.png"/></h2>
+      <img onclick="restartGame()" id="restart_icon" class="game-instructions restart-icon" src="./img/10_game_instruction_icons/refresh.png">
+      <h2><img class="game-instructions-left" src="./img/10_game_instruction_icons/arrow left.png"/></h2>
+      <h2>try your skills again!</h2>
+    </div>
 
   </body>
 </html>
