--- a/index.html
+++ b/index.html
@@ -48,8 +48,9 @@
     <div class="start-screen-main" id="start_screen">
       <div id="start_orientation" class="start-orientation">
         <img id="start_btn_1" class="start-btn" src="./img/10_game_instruction_icons/maximize.png">
-        <img onclick="init()" id="start_btn_2" class="start-btn" src="./img/10_game_instruction_icons/play1.png"/>
-        <img id="start_btn_3" class="start-btn" src="./img/10_game_instruction_icons/soundoff.png">
+        <img onclick="startGame()" id="start_btn_2" class="start-btn" src="./img/10_game_instruction_icons/play1.png"/>
+        <img id="sound_off" class="start-btn" src="./img/10_game_instruction_icons/soundoff.png">
+        <img id="sound_on" class="start-btn d-none" src="./img/10_game_instruction_icons/soundon.png">
       </div>
       <img class="start-screen" src="./img/9_intro_outro_screens/start/startscreen_1.png"/>      
     </div>
