--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
   </head>
 
   <body>
-    <h1>El Pollo Loco</h1>
+    <h1 id="main_font" class="main-font d-none">El Pollo Loco</h1>
 
     <canvas id="canvas" width="720" height="480" class="d-none">      
     </canvas>
@@ -64,10 +64,10 @@
 
     <!-- refresh and play again -->
     <div id="restart_game" class="restart-game-part d-none">
-      <h2>Click refresh button</h2>
-      <h2><img class="game-instructions-right" src="./img/10_game_instruction_icons/arrow left.png"/></h2>
-      <img onclick="restartGame()" id="restart_icon" class="game-instructions restart-icon" src="./img/10_game_instruction_icons/refresh.png">
-      <h2><img class="game-instructions-left" src="./img/10_game_instruction_icons/arrow left.png"/></h2>
+      <h2>Click refresh button</h2>        
+        <h2><img class="game-instructions-right" src="./img/10_game_instruction_icons/arrow left.png"/></h2>
+        <img onclick="restartGame()" id="restart_icon" class="game-instructions restart-icon" src="./img/10_game_instruction_icons/refresh.png">
+        <h2><img class="game-instructions-left" src="./img/10_game_instruction_icons/arrow left.png"/></h2>        
       <h2>try your skills again!</h2>
     </div>
 
