working on clean code. was needed to split check collision function to handlebottlecollision, handleendbossaftercollision and checkcollisionwithenemies

--- a/index.html
+++ b/index.html
@@ -47,7 +47,9 @@
     <!-- startscreen -->
     <div class="start-screen-main" id="start_screen">
       <div id="start_orientation" class="start-orientation">
-        <img id="start_btn_1" class="start-btn" src="./img/10_game_instruction_icons/maximize.png">
+        <!-- <img id="start_btn_1" class="start-btn" src="./img/10_game_instruction_icons/maximize.png">
+        <img id="start_btn_0" class="start-btn d-none" src="./img/10_game_instruction_icons/minimize.png"> -->
+        <img onclick="restartGame()" class="start-btn d-none" src="./img/10_game_instruction_icons/refresh.png">
         <img onclick="startGame()" id="start_btn_2" class="start-btn" src="./img/10_game_instruction_icons/play.png"/>
         <img id="sound_off" class="start-btn" src="./img/10_game_instruction_icons/soundoff.png">
         <img id="sound_on" class="start-btn d-none" src="./img/10_game_instruction_icons/soundon.png">
