--- a/index.html
+++ b/index.html
@@ -33,45 +33,76 @@
 
   <body>
     <h1 id="main_font" class="main-font d-none">El Pollo Loco</h1>
-
-    <canvas id="canvas" width="720" height="480" class="d-none">      
-    </canvas>
+  
+    <div>
+      <canvas id="canvas" width="720" height="480" class="d-none"></canvas>
+      <div class="relative-div">
+        <!-- Mobile View -->
+        <div id="mobile_view" class="mobile-view-main d-none">
+          <!-- Mobile View Top Panel -->
+          <div class="mobile-view-top">
+            <!-- <img class="play-icon" src="./img/10_game_instruction_icons/play.png"/>
+            <img class="volume-icon" src="./img/10_game_instruction_icons/soundoff.png"/> -->
+          </div>
+          <!-- Mobile View Bottom Panel -->
+          <div id="mobile_view_bottom" class="mobile-view-bottom">
+            <div class="left-hand">
+              <img class="move-Left" src="./img/10_game_instruction_icons/arrow left.png"/>
+              <img class="move-Right" src="./img/10_game_instruction_icons/arrow left.png"/>
+            </div>
+            <div class="right-hand">
+              <img class="bottle-throw" src="./img/10_game_instruction_icons/bottle2.png"/>
+              <img class="jump" src="./img/10_game_instruction_icons/arrow left.png"/>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
 
     <!-- images if pepe wins  -->
-    <img id="game_over_img_1" class="game-over-img d-none" src="./img/9_intro_outro_screens/game_over/oh no you lost!.png">
-    <img id="game_over_img_2" class="game-over-img d-none" src="./img/9_intro_outro_screens/game_over/game over!.png">
-    
-   <!-- game over images -->
-    <img id="win_img_2" class="win-img d-none" src="img/9_intro_outro_screens/win/win_2.png">
+    <img id="game_over_img_1" class="game-over-img d-none" src="./img/9_intro_outro_screens/game_over/oh no you lost!.png"/>
+    <img id="game_over_img_2" class="game-over-img d-none" src="./img/9_intro_outro_screens/game_over/game over!.png"/>
+
+    <!-- game over images -->
+    <img id="win_img_2" class="win-img d-none" src="img/9_intro_outro_screens/win/win_2.png"/>
 
     <!-- startscreen -->
     <div class="start-screen-main" id="start_screen">
       <div id="start_orientation" class="start-orientation">
         <!-- <img id="start_btn_1" class="start-btn" src="./img/10_game_instruction_icons/maximize.png">
         <img id="start_btn_0" class="start-btn d-none" src="./img/10_game_instruction_icons/minimize.png"> -->
-        <img onclick="restartGame()" class="start-btn d-none" src="./img/10_game_instruction_icons/refresh.png">
+        <img onclick="restartGame()" class="start-btn d-none" src="./img/10_game_instruction_icons/refresh.png"/>
         <img onclick="startGame()" id="start_btn_2" class="start-btn" src="./img/10_game_instruction_icons/play.png"/>
-        <img id="sound_off" class="start-btn" src="./img/10_game_instruction_icons/soundoff.png">
-        <img id="sound_on" class="start-btn d-none" src="./img/10_game_instruction_icons/soundon.png">
+        <img id="sound_off" class="start-btn" src="./img/10_game_instruction_icons/soundoff.png"/>
+        <img id="sound_on" class="start-btn d-none" src="./img/10_game_instruction_icons/soundon.png"/>
       </div>
-      <img class="start-screen" src="./img/9_intro_outro_screens/start/startscreen_1.png"/>      
+      <img class="start-screen" src="./img/9_intro_outro_screens/start/startscreen_1.png"/>
     </div>
 
     <!-- game move jump and throw intructions  -->
-    <div id="game_introducing" class="game-introducing">      
-      <h2><img class="game-instructions-left" src="./img/10_game_instruction_icons/arrow left.png"/>Arrow Left</h2>
-      <h2>Key-D for Throw<img class="game-instructions" src="./img/10_game_instruction_icons/bottle2.png"/>Space for Jump</h2>
-      <h2>Arrow Right<img class="game-instructions-right" src="./img/10_game_instruction_icons/arrow left.png"/></h2>
+    <div id="game_introducing" class="game-introducing">
+      <h2>
+        <img class="game-instructions-left" src="./img/10_game_instruction_icons/arrow left.png"/>Arrow Left
+      </h2>
+      <h2>
+        Key-D for Throw<img class="game-instructions" src="./img/10_game_instruction_icons/bottle2.png"/>Space for Jump
+      </h2>
+      <h2>
+        Arrow Right<img class="game-instructions-right" src="./img/10_game_instruction_icons/arrow left.png"/>
+      </h2>
     </div>
 
     <!-- refresh and play again -->
     <div id="restart_game" class="restart-game-part d-none">
-      <h2>Click refresh button</h2>        
-        <h2><img class="game-instructions-right" src="./img/10_game_instruction_icons/arrow left.png"/></h2>
-        <img onclick="restartGame()" id="restart_icon" class="game-instructions restart-icon" src="./img/10_game_instruction_icons/refresh.png">
-        <h2><img class="game-instructions-left" src="./img/10_game_instruction_icons/arrow left.png"/></h2>        
+      <h2>Click refresh button</h2>
+      <h2>
+        <img class="game-instructions-right" src="./img/10_game_instruction_icons/arrow left.png"/>
+      </h2>
+      <img onclick="restartGame()" id="restart_icon" class="game-instructions restart-icon" src="./img/10_game_instruction_icons/refresh.png"/>
+      <h2>
+        <img class="game-instructions-left" src="./img/10_game_instruction_icons/arrow left.png"/>
+      </h2>
       <h2>try your skills again!</h2>
     </div>
-
   </body>
 </html>
