some optical changes for desktop and mobile view. still working on it...

--- a/index.html
+++ b/index.html
@@ -32,9 +32,12 @@
   </head>
 
   <body>
-    <h1 id="main_font" class="main-font d-none">El Pollo Loco</h1>
+   
   
     <div>
+      <div class="main-font-class">
+      <h1 id="main_font" class="main-font d-none">El Pollo Loco</h1>
+    </div>
       <canvas id="canvas" width="720" height="480" class="d-none"></canvas>
       <div class="relative-div">
         <!-- Mobile View -->
@@ -81,27 +84,17 @@
 
     <!-- game move jump and throw intructions  -->
     <div id="game_introducing" class="game-introducing">
-      <h2>
-        <img class="game-instructions-left" src="./img/10_game_instruction_icons/arrow left.png"/>Arrow Left
-      </h2>
-      <h2>
-        Key-D for Throw<img class="game-instructions" src="./img/10_game_instruction_icons/bottle2.png"/>Space for Jump
-      </h2>
-      <h2>
-        Arrow Right<img class="game-instructions-right" src="./img/10_game_instruction_icons/arrow left.png"/>
-      </h2>
+      <h2><img class="game-instructions-left" src="./img/10_game_instruction_icons/arrow left.png"/>Arrow Left</h2>
+      <h2>Key-D for Throw<img class="game-instructions" src="./img/10_game_instruction_icons/bottle2.png"/>Space for Jump</h2>
+      <h2>Arrow Right<img class="game-instructions-right" src="./img/10_game_instruction_icons/arrow left.png"/></h2>
     </div>
 
     <!-- refresh and play again -->
     <div id="restart_game" class="restart-game-part d-none">
       <h2>Click refresh button</h2>
-      <h2>
-        <img class="game-instructions-right" src="./img/10_game_instruction_icons/arrow left.png"/>
-      </h2>
-      <img onclick="restartGame()" id="restart_icon" class="game-instructions restart-icon" src="./img/10_game_instruction_icons/refresh.png"/>
-      <h2>
-        <img class="game-instructions-left" src="./img/10_game_instruction_icons/arrow left.png"/>
-      </h2>
+      <h2><img class="game-instructions-right" src="./img/10_game_instruction_icons/arrow left.png"/></h2>
+        <img onclick="restartGame()" id="restart_icon" class="game-instructions restart-icon" src="./img/10_game_instruction_icons/refresh.png"/>
+      <h2><img class="game-instructions-left" src="./img/10_game_instruction_icons/arrow left.png"/></h2>
       <h2>try your skills again!</h2>
     </div>
   </body>
