completed mobile view and added movile view control icons for playing game

--- a/index.html
+++ b/index.html
@@ -50,12 +50,12 @@
           <!-- Mobile View Bottom Panel -->
           <div id="mobile_view_bottom" class="mobile-view-bottom">
             <div class="left-hand">
-              <img class="move-Left" src="./img/10_game_instruction_icons/arrow left.png"/>
-              <img class="move-Right" src="./img/10_game_instruction_icons/arrow left.png"/>
+              <img id="move_left" class="move-Left" src="./img/10_game_instruction_icons/arrow left.png"/>
+              <img id="move_right" class="move-Right" src="./img/10_game_instruction_icons/arrow left.png"/>
             </div>
             <div class="right-hand">
-              <img class="bottle-throw" src="./img/10_game_instruction_icons/bottle2.png"/>
-              <img class="jump" src="./img/10_game_instruction_icons/arrow left.png"/>
+              <img id="throw_bottle" class="bottle-throw" src="./img/10_game_instruction_icons/bottle2.png"/>
+              <img id="jump" class="jump" src="./img/10_game_instruction_icons/arrow left.png"/>
             </div>
           </div>
         </div>
