added css code for turning device for play game in landscape mode

--- a/index.html
+++ b/index.html
@@ -33,7 +33,11 @@
 
   <body>
    
-  
+  <div class="mobileScreen">
+    <img class="turndevice" src="./img/10_game_instruction_icons/turndevice.png">
+    <p>...please turn your mobile device!</p>
+  </div>
+
     <div>
       <div class="main-font-class">
       <h1 id="main_font" class="main-font d-none">El Pollo Loco</h1>
@@ -50,12 +54,12 @@
           <!-- Mobile View Bottom Panel -->
           <div id="mobile_view_bottom" class="mobile-view-bottom">
             <div class="left-hand">
-              <img id="move_left" class="move-Left" src="./img/10_game_instruction_icons/arrow left.png"/>
-              <img id="move_right" class="move-Right" src="./img/10_game_instruction_icons/arrow left.png"/>
+              <img id="move_left" class="move-Left" src="./img/10_game_instruction_icons/arrow-left-blue.png"/>
+              <img id="move_right" class="move-Right" src="./img/10_game_instruction_icons/arrow-left-blue.png"/>
             </div>
             <div class="right-hand">
-              <img id="throw_bottle" class="bottle-throw" src="./img/10_game_instruction_icons/bottle2.png"/>
-              <img id="jump" class="jump" src="./img/10_game_instruction_icons/arrow left.png"/>
+              <img id="throw_bottle" class="bottle-throw" src="./img/10_game_instruction_icons/bottle1.png"/>
+              <img id="jump" class="jump" src="./img/10_game_instruction_icons/arrow-left-blue.png"/>
             </div>
           </div>
         </div>
