added imprint and privacy policy html and css data. added some jsdoc in gamejs. changed increase speed for endboss

--- a/index.html
+++ b/index.html
@@ -45,14 +45,7 @@
       <canvas id="canvas" width="720" height="480" class="d-none"></canvas>
       <div class="relative-div">
         <!-- Mobile View -->
-        <div id="mobile_view" class="mobile-view-main d-none">
-          <!-- Mobile View Top Panel -->
-          <div class="mobile-view-top">
-            <!-- <img class="play-icon" src="./img/10_game_instruction_icons/play.png"/>
-            <img class="volume-icon" src="./img/10_game_instruction_icons/soundoff.png"/> -->
-          </div>
-          <!-- Mobile View Bottom Panel -->
-          <div id="mobile_view_bottom" class="mobile-view-bottom">
+        <div id="mobile_view" class="mobile-view-main d-none">         
             <div class="left-hand">
               <img id="move_left" class="move-Left" src="./img/10_game_instruction_icons/arrow-left-blue.png"/>
               <img id="move_right" class="move-Right" src="./img/10_game_instruction_icons/arrow-left-blue.png"/>
@@ -60,8 +53,7 @@
             <div class="right-hand">
               <img id="throw_bottle" class="bottle-throw" src="./img/10_game_instruction_icons/bottle1.png"/>
               <img id="jump" class="jump" src="./img/10_game_instruction_icons/arrow-left-blue.png"/>
-            </div>
-          </div>
+            </div>          
         </div>
       </div>
     </div>
@@ -76,8 +68,6 @@
     <!-- startscreen -->
     <div class="start-screen-main" id="start_screen">
       <div id="start_orientation" class="start-orientation">
-        <!-- <img id="start_btn_1" class="start-btn" src="./img/10_game_instruction_icons/maximize.png">
-        <img id="start_btn_0" class="start-btn d-none" src="./img/10_game_instruction_icons/minimize.png"> -->
         <img onclick="restartGame()" class="start-btn d-none" src="./img/10_game_instruction_icons/refresh.png"/>
         <img onclick="startGame()" id="start_btn_2" class="start-btn" src="./img/10_game_instruction_icons/play.png"/>
         <img id="sound_off" class="start-btn" src="./img/10_game_instruction_icons/soundoff.png"/>
@@ -101,5 +91,16 @@
       <h2><img class="game-instructions-left" src="./img/10_game_instruction_icons/arrow left.png"/></h2>
       <h2>try your skills again!</h2>
     </div>
+    <div class="impressum">
+      <p><a href="imprint.html">Impressum</a></p>
+      <p><a href="privacypolicy.html">Privacy policy</a></p>
+    </div>
   </body>
 </html>
+
+<!-- Hintergrundbild von Vecteezy.com 
+icons from flaticon.com/free-icons -->
+
+
+
+ 
