last check of the entire code. indent and remove commented out code

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
   </head>
 
   <body>
-   
+   <!-- reminder if using mobile device  -->
   <div class="mobileScreen">
     <img class="turndevice" src="./img/10_game_instruction_icons/turndevice.png">
     <p>...please turn your mobile device!</p>
@@ -42,8 +42,11 @@
       <div class="main-font-class">
       <h1 id="main_font" class="main-font d-none">El Pollo Loco</h1>
     </div>
+
       <canvas id="canvas" width="720" height="480" class="d-none"></canvas>
+    
       <div class="relative-div">
+
         <!-- Mobile View -->
         <div id="mobile_view" class="mobile-view-main d-none">         
             <div class="left-hand">
@@ -91,10 +94,13 @@
       <h2><img class="game-instructions-left" src="./img/10_game_instruction_icons/arrow left.png"/></h2>
       <h2>try your skills again!</h2>
     </div>
+
+    <!-- Impress and privacy policy -->
     <div class="impressum">
       <p><a href="imprint.html">Impressum</a></p>
       <p><a href="privacypolicy.html">Privacy policy</a></p>
     </div>
+    
   </body>
 </html>
 
