working on mobile view. not finished yet

--- a/imprint.html
+++ b/imprint.html
@@ -8,7 +8,7 @@
     <title>Imprint</title>
   </head>
   <body>
-    <div>
+    <div class="mobile-view">
       <a href="index.html"
         ><img
           class="back-to-main"
