--- a/privacypolicy.html
+++ b/privacypolicy.html
@@ -8,7 +8,7 @@
     <title>Privacy Policy</title>
   </head>
   <body>
-    <div>
+    <div class="privacypolicy-top">
       <a href="index.html">
         <img class="back-to-main" src="./img/10_game_instruction_icons/arrow left.png"/>
       </a>
