added/included idle funtkion for character, long idle was already present

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
      <div id="restart_game" class="restart-game-part d-none">
       <h2>Click refresh button</h2>
         <h2><img class="game-instructions-right" src="./img/10_game_instruction_icons/arrow left.png"/></h2>
-        <img onclick="startGame()" id="restart_icon" class="game-instructions restart-icon" src="./img/10_game_instruction_icons/refresh.png"/>
+        <img onclick="restartGame()" id="restart_icon" class="game-instructions restart-icon" src="./img/10_game_instruction_icons/refresh.png"/>
           <h2><img class="game-instructions-left" src="./img/10_game_instruction_icons/arrow left.png"/></h2>
             <h2>try your skills again!</h2>
     </div>
