--- a/index.html
+++ b/index.html
@@ -61,22 +61,21 @@
       </div>
     </div>
 
-    <!-- images if pepe wins  -->
-     <div class="game-over-imgs">
-      <img id="game_over_img_1" class="game-over-img d-none" src="./img/9_intro_outro_screens/game_over/oh no you lost!.png"/>
-      <img id="game_over_img_2" class="game-over-img d-none" src="./img/9_intro_outro_screens/game_over/game over!.png"/>
-     <!-- refresh and play again -->
-     <div id="restart_game" class="restart-game-part d-none">
-      <h2>Click refresh button</h2>
-        <h2><img class="game-instructions-right" src="./img/10_game_instruction_icons/arrow left.png"/></h2>
-        <img onclick="restartGame()" id="restart_icon" class="game-instructions restart-icon" src="./img/10_game_instruction_icons/refresh.png"/>
-          <h2><img class="game-instructions-left" src="./img/10_game_instruction_icons/arrow left.png"/></h2>
-            <h2>try your skills again!</h2>
-    </div>
     
-    </div>
-    <!-- game over images -->
-    <img id="win_img_2" class="win-img d-none" src="img/9_intro_outro_screens/win/win_2.png"/>
+     <div class="game-over-imgs">
+        <!-- game over images -->
+          <img id="win_img_2" class="win-img d-none" src="img/9_intro_outro_screens/win/win_2.png"/>
+        <!-- images if pepe wins  -->
+          <img id="game_over_img_1" class="game-over-img d-none" src="./img/9_intro_outro_screens/game_over/oh no you lost!.png"/>
+            <img id="game_over_img_2" class="game-over-img d-none" src="./img/9_intro_outro_screens/game_over/game over!.png"/>
+     
+        <!-- refresh and play again -->
+        <div id="restart_game" class="restart-game-part d-none">
+          <h2>Back to the menu</h2>            
+              <img onclick="backToMenu()" id="restart_icon" class="game-instructions restart-icon" src="./img/10_game_instruction_icons/menu-yellow.png"/>             
+           <h2>try your skills again!</h2>
+      </div>    
+    </div>   
 
     <!-- startscreen -->
     <div class="start-screen-main" id="start_screen">
