completet restart game function

--- a/index.html
+++ b/index.html
@@ -70,8 +70,9 @@
           <!-- refresh and play again -->
         <div id="restart_game" class="restart-game-part d-none">
           <h2>Back to the menu</h2>            
-              <img onclick="backToMenu()" id="restart_icon" class="game-instructions restart-icon" src="./img/10_game_instruction_icons/menu-yellow.png"/>             
-           <h2>try your skills again!</h2>
+              <img onclick="backToMenu()" id="restart_icon" class="game-instructions restart-icon" src="./img/10_game_instruction_icons/menu-yellow.png"/>
+              <img onclick="restartGame()" id="start_btn_3" class="game-instructions restart-icon" src="./img/10_game_instruction_icons/refresh.png"/>    
+           <h2>to try your skills again!</h2>
         </div>    
       </div>   
 
